--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/react-highcharts": "^16.0.3",
+    "highcharts": "^10.1.0",
+    "highcharts-react-official": "^3.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-jss": "^10.9.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
