--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +14,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-highcharts": "^16.0.3",
+    "classnames": "^2.3.1",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
     "react": "^18.1.0",
@@ -18,6 +22,7 @@
     "react-jss": "^10.9.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.5.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
